tests/parser/syntax-errors/expected-expr/expected_expr_no_index_expr.choc
# RUN: choco-opt "%s" | filecheck "%s"

[][]

# CHECK:      SyntaxError (line 3, column 4): Expected expression.
# CHECK-NEXT: >>>[][]
# CHECK-NEXT: >>>---^
